--- a/dapp/package.json
+++ b/dapp/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@stricahq/typhonjs": "^1.2.8",
+    "body-parser": "^1.20.2",
     "express": "^4.18.1",
     "node-fetch": "^2.6.1",
     "nodejs": "^0.0.0",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "xhr2": "^0.2.1"
   }
 }
