Random Swap complete - Random Swap smart contracts complete - Test documentation for the Random Swap contracts - Updated dApp that interacts with the Random swap contracts - Swapper service running on the dApp server that process swap requests

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 smart-contracts/dist-newstyle
 smart-contracts/plutus-scripts
 smart-contracts/repl-testing
+smart-contracts/debugging
 node_modules
 *.key
 *.pem
 *.code-workspace
 design
+*.vkey
+*.skey
+*.pkh
+*.addr
+nolongerused
