--- a/dapp/package.json
+++ b/dapp/package.json
@@ -10,13 +10,21 @@
   "author": "CENT",
   "license": "ISC",
   "dependencies": {
+    "@blockfrost/blockfrost-js": "^5.6.0",
+    "@harmoniclabs/blockfrost-pluts": "^0.1.15",
+    "@harmoniclabs/crypto": "^0.2.4",
+    "@harmoniclabs/plu-ts": "^0.8.2",
     "@stricahq/typhonjs": "^1.2.8",
+    "bip39": "^3.1.0",
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "node-fetch": "^2.6.1",
     "nodejs": "^0.0.0",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2",
+    "util": "^0.12.5",
     "xhr2": "^0.2.1"
   }
 }
